--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ a {
   margin-left: 2px;
   margin-right: 2px;
 }
-a:hover, a:focus, button:hover, button:focus {
+a:hover, a:focus, button:hover, button:focus, input:hover, input:focus, textarea:hover, textarea:focus {
   /* change color for accessibility */
   color: #007dbb;
   text-decoration: none;
@@ -133,7 +133,7 @@ nav h1 a {
   line-height: 2;
   margin: 0 20px;
 }
-.filter-options select {
+.filter-options select, #formRating {
   background-color: white;
   border: 1px solid #fff;
   font-family: Arial,sans-serif;
@@ -296,16 +296,16 @@ nav h1 a {
   text-transform: uppercase;
 	width: 100%;
 }
-#restaurant-container, #reviews-container {
+#restaurant-container, #reviews-container, #new-review-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   padding: 140px 40px 30px;
-  width: calc(50% - 80px);
+  /*width: calc(50% - 80px);*/
 }
-#reviews-container {
+#reviews-container, #new-review-container {
   padding: 30px 40px 80px;
 }
-#reviews-container h2 {
+#reviews-container h2, #new-review-container h2 {
   color: #BC5A01;
   font-size: 24pt;
   font-weight: 300;
@@ -445,7 +445,7 @@ nav h1 a {
     width: 100%;
   }
 
-  #restaurant-container, #reviews-container {
+  #restaurant-container, #reviews-container #new-review-container {
     width: 90%;
     max-width: 450px;
     padding: 0;
@@ -482,3 +482,44 @@ nav h1 a {
   }
 }
 */
+
+
+/* ====================== Restaurant Review Form ====================== */
+input, textarea {
+  background-color: white;
+  border: 1px solid #fff;
+  font-family: Arial,sans-serif;
+  font-size: 11pt;
+  letter-spacing: 0;
+  margin: 10px;
+  padding: 0 10px;
+}
+
+input {
+  height: 35px;
+  width: 200px;
+}
+
+textarea {
+  width: 400px;
+  height: 105px;
+}
+
+label {
+  font-size: 14pt;
+  font-weight: bold;
+}
+
+.submit {
+  /* changed color for accessibility */
+  background-color: #BC5A01;
+  border-bottom: 3px solid #eee;
+  color: #fff;
+  display: inline-block;
+  font-size: 10pt;
+  margin: 15px 0 0;
+  // padding: 15px 30px;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+}
