--- a/prod/css/styles.css
+++ b/prod/css/styles.css
@@ -300,7 +300,7 @@ nav h1 a {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   padding: 140px 40px 30px;
-  /*width: calc(50% - 80px);*/
+  width: calc(50% - 80px);
 }
 #reviews-container, #new-review-container {
   padding: 30px 40px 80px;
@@ -497,11 +497,11 @@ input, textarea {
 
 input {
   height: 35px;
-  width: 200px;
+  width: auto;
 }
 
 textarea {
-  width: 400px;
+  width: auto;
   height: 105px;
 }
 
@@ -523,3 +523,19 @@ label {
   text-decoration: none;
   text-transform: uppercase;
 }
+
+#formID {
+  display: none;
+}
+
+#submitReview {
+    background-color: #BC5A01;
+    border-bottom: 3px solid #eee;
+    color: #fff;
+    display: inline-block;
+    font-size: 10pt;
+    margin: 15px 0 30px;
+    padding: 15px 30px;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
