--- a/css/styles.css
+++ b/css/styles.css
@@ -540,3 +540,12 @@ label {
     text-align: center;
     text-decoration: none;
     text-transform: uppercase;
+}
+
+.submit:hover, .submit:focus, #submitReview:hover, #submitReview:focus {
+  /* change color for accessibility */
+  color: #007dbb;
+  text-decoration: none;
+  /* add focus */
+  box-shadow: 0 0 8px 3px;
+}
